plugins {
    id 'java'
}

group 'org.example'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8
//sourceCompatibility = 1.8

//repositories {
//    mavenCentral()
//}

dependencies {
    compile 'commons-codec:commons-codec:1.14'

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
}
